code: create the train and validation dataset

--- a/notebooks/test_function.ipynb
+++ b/notebooks/test_function.ipynb
@@ -64,29 +64,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "id": "689e66be",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "dataset = SCUTDataset(\n",
+    "train_dataset = SCUTDataset(\n",
     "    root_dir=\"D:/marchine_learning/Projet/Deep_learning Project/OCR project/SCUT-CTW/data/scut_data/scut_train/\",     # adapte ton chemin\n",
     "    ann_path=\"D:/marchine_learning/Projet/Deep_learning Project/OCR project/SCUT-CTW/data/scut_data/scut_train.txt\",\n",
+    "    processor= processor,\n",
+    ")\n",
+    "\n",
+    "valid_dataset = SCUTDataset(\n",
+    "    root_dir=\"D:/marchine_learning/Projet/Deep_learning Project/OCR project/SCUT-CTW/data/scut_data/scut_test/\",     # adapte ton chemin\n",
+    "    ann_path=\"D:/marchine_learning/Projet/Deep_learning Project/OCR project/SCUT-CTW/data/scut_data/scut_test.txt\",\n",
     "    processor= processor,\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "id": "ecd1bef6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([    0,   387,  2747,   487,  4014, 13732,     2,  -100,  -100,  -100,\n",
+       "tensor([    0,  2553, 38603,    19,  3061,     2,  -100,  -100,  -100,  -100,\n",
        "         -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,\n",
        "         -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,\n",
        "         -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,\n",
@@ -101,19 +106,39 @@
        "         -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dataset[0]['labels']"
+    "valid_dataset[0]['labels']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "2fed6775",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of training examples: 6052\n",
+      "Number of validation examples: 1651\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Number of training examples:\", len(train_dataset))\n",
+    "print(\"Number of validation examples:\", len(valid_dataset))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abaaa6ed",
+   "id": "0aea8218",
    "metadata": {},
    "outputs": [],
    "source": []
