code: Create a data Loader (Tran and valid)

--- a/notebooks/test_function.ipynb
+++ b/notebooks/test_function.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "689e66be",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "ecd1bef6",
    "metadata": {},
    "outputs": [
@@ -137,11 +137,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "0aea8218",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "train_dataloader = DataLoader(\n",
+    "    train_dataset, batch_size=TrainingConfig.BATCH_SIZE, shuffle=True\n",
+    ")\n",
+    "valid_dataloader = DataLoader(\n",
+    "    valid_dataset, batch_size=TrainingConfig.BATCH_SIZE\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
