code_structure: Test one batch and rename the notebook "01_dataset_test"

--- a/notebooks/01_dataset_test.ipynb
+++ b/notebooks/01_dataset_test.ipynb
@@ -15,10 +15,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "93ca79b8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\marchine_learning\\Projet\\Deep_learning Project\\OCR project\\SCUT-CTW\\trocr_env\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from torch.utils.data import DataLoader\n",
     "from src import SCUTDataset\n",
@@ -28,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "798dc110",
    "metadata": {},
    "outputs": [],
@@ -54,17 +63,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "6e898fd5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning: You are sending unauthenticated requests to the HF Hub. Please set a HF_TOKEN to enable higher rate limits and faster downloads.\n"
+     ]
+    }
+   ],
    "source": [
     "processor = TrOCRProcessor.from_pretrained(ModelConfig.MODEL_NAME)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "689e66be",
    "metadata": {},
    "outputs": [],
@@ -84,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "ecd1bef6",
    "metadata": {},
    "outputs": [
@@ -106,7 +123,7 @@
        "         -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "id": "2fed6775",
    "metadata": {},
    "outputs": [
@@ -137,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "id": "0aea8218",
    "metadata": {},
    "outputs": [],
@@ -148,6 +165,28 @@
     "valid_dataloader = DataLoader(\n",
     "    valid_dataset, batch_size=TrainingConfig.BATCH_SIZE\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "c728658d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([16, 3, 384, 384])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "batch = next(iter(train_dataloader)) \n",
+    "batch[\"pixel_values\"].shape"
    ]
   }
  ],
