fix(notebook 1_2) : Correct DATA_ROOT path

--- a/notebooks/02_load_model.ipynb
+++ b/notebooks/02_load_model.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "89a62f22",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
     "\n",
     "@dataclass(frozen=True)\n",
     "class DatasetConfig:\n",
-    "    DATA_ROOT:     str = 'captcha_data'\n",
+    "    DATA_ROOT:     str = 'data/scut_data'\n",
     "\n",
     "@dataclass(frozen=True)\n",
     "class ModelConfig:\n",
