--- a/notebooks/01_dataset_test.ipynb
+++ b/notebooks/01_dataset_test.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "798dc110",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
     "\n",
     "@dataclass(frozen=True)\n",
     "class DatasetConfig:\n",
-    "    DATA_ROOT:     str = 'captcha_data'\n",
+    "    DATA_ROOT:     str = 'data/scut_data'\n",
     "\n",
     "@dataclass(frozen=True)\n",
     "class ModelConfig:\n",
